--- a/app/src/main/res/layout/linear.xml
+++ b/app/src/main/res/layout/linear.xml
@@ -164,7 +164,8 @@
         android:layout_width="163dp"
         android:layout_height="32dp"
         android:layout_marginHorizontal="180dp"
-        android:layout_marginTop="-30dp" />
+        android:layout_marginTop="-30dp"
+        android:entries="@array/values" />
 
     <TextView
         android:id="@+id/stats_heading"
