--- a/app/src/main/res/layout/constraint.xml
+++ b/app/src/main/res/layout/constraint.xml
@@ -31,8 +31,8 @@
         android:id="@+id/stats_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="40dp"
         android:text="@string/stats_heading"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -43,10 +43,10 @@
         android:id="@+id/hp_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@+id/stats_heading"
         app:layout_constraintTop_toBottomOf="@+id/spinner_box"
         tools:text="@string/zero" />
@@ -55,10 +55,10 @@
         android:id="@+id/defense_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="79dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="9dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
         android:text="@string/zero"
         app:layout_constraintStart_toEndOf="@+id/defenseLabel_tv"
         app:layout_constraintTop_toBottomOf="@+id/attack_editText" />
@@ -67,8 +67,8 @@
         android:id="@+id/defenseLabel_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:text="@string/defenseLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/attackLabel_tv" />
@@ -80,7 +80,7 @@
         android:layout_marginStart="91dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@+id/attackLabel_tv"
         app:layout_constraintTop_toBottomOf="@+id/hp_editText"
         tools:text="@string/zero" />
@@ -109,8 +109,8 @@
         android:id="@+id/national_editview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="number"
         android:text="@string/nnDefault"
@@ -118,86 +118,21 @@
         app:layout_constraintTop_toBottomOf="@+id/tagLine_tv" />
 
     <TextView
-        android:id="@+id/speciesLabel_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="26dp"
-        android:text="@string/speciesLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLabel_tv" />
-
-    <TextView
-        android:id="@+id/weightLabel_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="26dp"
-        android:text="@string/WeightLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heightLabel_tv" />
-
-    <TextView
         android:id="@+id/genderLabel_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="28dp"
         android:text="@string/GenderLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/speciesLabel_tv" />
-
-
-    <EditText
-        android:id="@+id/species_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="78dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/speciesDefault"
-        app:layout_constraintStart_toEndOf="@+id/speciesLabel_tv"
-        app:layout_constraintTop_toBottomOf="@+id/name_editText" />
-
-    <TextView
-        android:id="@+id/heightLabel_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="26dp"
-        android:text="@string/HeightLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genderLabel_tv" />
-
-    <EditText
-        android:id="@+id/weight_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="11dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/weightDefault"
-        app:layout_constraintStart_toEndOf="@+id/weightLabel_tv"
-        app:layout_constraintTop_toBottomOf="@+id/height_editText" />
-
-    <TextView
-        android:id="@+id/nationalLabel_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="53dp"
-        android:text="@string/nationalNumLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_heading" />
 
     <TextView
         android:id="@+id/levelLabel_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="@string/levelLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/weightLabel_tv" />
@@ -207,17 +142,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="32dp"
         android:text="@string/nameLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nationalLabel_tv" />
+
+    <TextView
+        android:id="@+id/weightLabel_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/WeightLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heightLabel_tv" />
+
+    <EditText
+        android:id="@+id/species_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="@string/speciesDefault"
+        app:layout_constraintStart_toEndOf="@+id/speciesLabel_tv"
+        app:layout_constraintTop_toBottomOf="@+id/name_editText" />
+
+    <EditText
+        android:id="@+id/height_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:text="@string/heightDefault"
+        app:layout_constraintStart_toEndOf="@+id/heightLabel_tv"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="260dp"
         android:layout_height="51dp"
         android:layout_marginStart="144dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_editText">
 
@@ -250,36 +219,77 @@
 
     </RadioGroup>
 
-    <EditText
-        android:id="@+id/height_editText"
+    <TextView
+        android:id="@+id/heightLabel_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="52dp"
+        android:text="@string/HeightLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genderLabel_tv" />
+
+    <Spinner
+        android:id="@+id/spinner_box"
+        android:layout_width="163dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="4dp"
+        android:entries="@array/values"
+        app:layout_constraintStart_toEndOf="@+id/levelLabel_tv"
+        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />
+
+    <TextView
+        android:id="@+id/nationalLabel_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/nationalNumLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_heading" />
+
+    <EditText
+        android:id="@+id/weight_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="@string/heightDefault"
-        app:layout_constraintStart_toEndOf="@+id/heightLabel_tv"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        android:inputType="numberDecimal"
+        android:text="@string/weightDefault"
+        app:layout_constraintStart_toEndOf="@+id/weightLabel_tv"
+        app:layout_constraintTop_toBottomOf="@+id/height_editText" />
 
     <EditText
         android:id="@+id/name_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="91dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:inputType="text"
         android:text="@string/nameDefault"
         app:layout_constraintStart_toEndOf="@+id/nameLabel_tv"
         app:layout_constraintTop_toBottomOf="@+id/national_editview" />
 
+    <TextView
+        android:id="@+id/speciesLabel_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/speciesLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameLabel_tv" />
+
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="177dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="12dp"
         android:text="@string/resetLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/defense_editText" />
@@ -288,20 +298,30 @@
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:text="@string/saveLabel"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/defense_editText" />
 
-    <Spinner
-        android:id="@+id/spinner_box"
-        android:layout_width="163dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="8dp"
-        android:entries="@array/values"
-        app:layout_constraintStart_toEndOf="@+id/levelLabel_tv"
-        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />
+    <TextView
+        android:id="@+id/constraint_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/constraintView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagLine_tv" />
+
+<!--    <Button-->
+<!--        android:id="@+id/switch_button2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="13dp"-->
+<!--        android:layout_marginEnd="13dp"-->
+<!--        android:text="@string/nextLabel"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/button"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/defense_editText" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
