--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -22,6 +22,14 @@
         android:text="@string/tagline"
         android:textAlignment="center" />
 
+    <TextView
+        android:id="@+id/tableConstraint_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-0dp"
+        android:text="@string/tableView"
+        android:textAlignment="center" />
+
 
 
     <TableRow>
@@ -39,7 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="number"
+            android:text="@string/nnDefault"/>
 
     </TableRow>
 
@@ -57,6 +66,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
+        android:text="@string/nameDefault"
         />
 
     </TableRow>
@@ -77,7 +87,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        />
+        android:text="@string/speciesDefault"/>
     </TableRow>
 
 
@@ -145,8 +155,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
-        />
+        android:inputType="numberDecimal"
+        android:text="@string/heightDefault"/>
     </TableRow>
 
     <TableRow>
@@ -164,7 +174,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="numberDecimal"
+        android:text="@string/weightDefault"
         />
     </TableRow>
 
@@ -210,7 +221,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
+        android:text="@string/zero"
         />
     </TableRow>
 
@@ -228,7 +240,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
+        android:text="@string/zero"
         />
 
     </TableRow>
@@ -247,7 +260,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
+        android:text="@string/zero"
         />
     </TableRow>
 
@@ -255,20 +269,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="-20dp"
-            android:text="@string/resetLabel" />
 
-        <Button
+    <Button
+        android:id="@+id/button"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginLeft="30dp"
+        android:text="@string/resetLabel" />
+
+    <Button
             android:id="@+id/save_button"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="80dp"
             android:text="@string/saveLabel" />
     </TableRow>
+
+
+<!--    <Button-->
+<!--        android:id="@+id/switch_button2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:text="@string/nextLabel" />-->
 
 
 </TableLayout>
